Première modification pour la mise à jour de toute les dépendances du projet

--- a/configuration.json.example
+++ b/configuration.json.example
@@ -21,6 +21,6 @@
         "filtre":"",
         "filtre_recherche":""
     },
-    "stage" : "production",
+    "stage" : "development",
     "logger_token" :""
 }
