--- a/composer.json
+++ b/composer.json
@@ -22,23 +22,23 @@
         }
     },
     "license": "AGPL-3.0",
-    "config": {
-        "bin-dir": "Vendor/Bin",
-        "vendor-dir": "Vendor"
-    },
     "require": {
-        "php": "^7.1",
-        "slim/slim": "3.12.1",
-        "doctrine/dbal": "2.9.2",
-        "doctrine/orm": "2.6.6",
-        "php-di/php-di": "6.0.11",
-        "adldap2/adldap2": "10.0.6",
-        "rollbar/rollbar": "1.8.1"
+        "php": "8.3.*",
+        "slim/slim": "*",
+        "doctrine/dbal": "*",
+        "doctrine/orm": "*",
+        "php-di/php-di": "*",
+        "adldap2/adldap2": "*",
+        "rollbar/rollbar": "*",
+        "slim/psr7": "*",
+        "slim/http": "*",
+        "symfony/cache": "*"
     },
     "require-dev": {
-        "atoum/atoum": "3.3.0",
-        "codacy/coverage": "1.4.2",
-        "codeception/codeception": "4.0.2",
-        "herloct/codeception-slim-module": "1.1"
+        "atoum/atoum": "*",
+        "codacy/coverage": "*",
+        "codeception/codeception": "*",
+        "docler-labs/codeception-slim-module": "*",
+        "rector/rector": "*"
     }
 }
