Ajout des tests fonctionnels dans la CI

--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,6 @@
         "codeception/module-rest": "^3.4"
     },
     "scripts": {
-        "test": "vendor/bin/phpunit"
+        "test": "make test"
     }
 }
